codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completion_after_streamed_tool_answer.snap
---
source: tui/src/chatwidget/tests/completion_styling_tests.rs
expression: normalize_completion_timestamps(& (text))
---
• Ran echo ready
  └ ready

• The change is ready.

  Worked for [duration] · [completion time]
