codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completion_like_transcript_text.snap
---
source: tui/src/chatwidget/tests/completion_styling_tests.rs
expression: "&transcript"
---
› Sep 6, 2000 at 2:32 PM
• Sep 6, 2000 at 2:32 PM
  └ Sep 6, 2000 at 2:32 PM
  The job was done Sep 6, 2000 at 2:32 PM
  Sep 6, 2000 at 2:32 PM is the expected text
  Worked for 2m 5s · Sep 6, 2000 at 2:32 PM is quoted

  3:24 PM
  Worked for 1h 2m 3s · Sep 6, 2000 at 2:32 PM
