codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_model_display_name_all_models.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
assertion_line: 40
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model and Effort


› 1. GPT-5.6 Luna (current)  Custom provider model

  enter select · esc back
