codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__daybreak_refusal_enable_picker.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Turn on Daybreak for your next request?


› 1. Enable Daybreak
  2. Not now

  enter select · esc back
